--- a/style.css
+++ b/style.css
@@ -1,16 +1,84 @@
 /* GENERAL STYLES */
 
 
+header {
+    margin-bottom: 200px;
+}
+
 /* PICTURE OF THE DAY STYLES */
 
 #potdSection {
-    margin-bottom: 100px;
+    margin-bottom: 500px;
+    width: 100%;
+    height: 700px;
+    background: lightgrey;
 }
+
+#potdBody h2 {
+    color: red;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border:black 4.3px solid;
+    /* background: #3B3C3E; */
+    /* background-color: black; */
+    /* text-transform: uppercase; */
+    font-size: 55px;
+    opacity: 0.8;
+    font-weight: 900;
+}
+#potdBody h3 {
+    position: absolute;
+    top: 53%;
+    /* left: 50%; */
+    border:#E33E42 7px solid;
+    background: #E33E42;
+    /* text-transform: uppercase; */
+    font-size: 20px;
+    margin-left: 40%;
+    /* margin-right: 605px; */
+    padding: 2px 6px 2px 6px;
+    text-decoration: none;
+}
+
+#potdBody p {
+    position: absolute;
+    top: 60%;
+    /* left: 50%; */
+    border:#E33E42 7px solid;
+    background:rgb(227, 62, 66, 0.3);
+
+    /* text-transform: uppercase; */
+    font-size: 16px;
+    margin-left: 20%;
+    margin-right: 20%;
+    /* margin-right: 605px; */
+    padding: 2px 6px 2px 6px;
+    text-decoration: none;
+    color:black;
+}
+#potdBody img {
+    max-width: 100%;
+    max-height: 200px;
+}
+
+
+
 
 
 /* ROVER IMAGE STYLES */
 
-/* .roverImages img {
-    display: grid;
+.results {
+    border: solid 1px black;
+ 
+}
+
+#roverImages {
+  
+    display: flex; 
     grid-template-columns: 25% 25% 25% 25%;
-} */
+    grid-template-rows: 25% 25% 25% 25%;
+    /* width: 200px; */
+
+ } 
