--- a/public/style.css
+++ b/public/style.css
@@ -2,39 +2,41 @@
 
 
 header {
-    margin-bottom: 200px;
+    /* margin-bottom: 200px; */
 }
 
 /* PICTURE OF THE DAY STYLES */
 
-#potdSection {
-    margin-bottom: 500px;
+
+ #potd{
+    /* margin-bottom: 500px; */
     width: 100%;
-    height: 700px;
+    height: 500px;
     background: lightgrey;
 }
 
-#potdBody h2 {
+
+
+ /* #potdBody h2 {
     color: red;
     position: absolute;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     border:black 4.3px solid;
-    /* background: #3B3C3E; */
-    /* background-color: black; */
-    /* text-transform: uppercase; */
+    background: #3B3C3E;
+    background-color: black;
+    text-transform: uppercase;
     font-size: 55px;
     opacity: 0.8;
     font-weight: 900;
-}
+} */
 #potdBody h3 {
     position: absolute;
-    top: 53%;
-    /* left: 50%; */
+    top: 10%;
+    left: 17%;
     border:#E33E42 7px solid;
     background: #E33E42;
-    /* text-transform: uppercase; */
     font-size: 20px;
     margin-left: 40%;
     /* margin-right: 605px; */
@@ -44,24 +46,26 @@ header {
 
 #potdBody p {
     position: absolute;
-    top: 60%;
-    /* left: 50%; */
+    top: 30%;
+    left: 40%;
+    right: 5%;
     border:#E33E42 7px solid;
     background:rgb(227, 62, 66, 0.3);
 
     /* text-transform: uppercase; */
     font-size: 16px;
-    margin-left: 20%;
-    margin-right: 20%;
+    /* margin-left: 20%; */
+    /* margin-right: 20%; */
     /* margin-right: 605px; */
     padding: 2px 6px 2px 6px;
     text-decoration: none;
     color:black;
 }
-#potdBody img {
-    max-width: 100%;
-    max-height: 200px;
-}
+
+ #potdBody img { 
+    max-width: 500px;
+    max-height: 500px;
+} 
 
 
 
@@ -74,11 +78,17 @@ header {
  
 }
 
-#roverImages {
+.roverImages {
   
-    display: flex; 
+    display: grid; 
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 25% 25% 25% 25%;
-    /* width: 200px; */
+    /* grid-template-rows: 33% 33% 33%; */
 
  } 
+
+ .roverImages img {
+     width: 350px;
+     height: 350px;
+     padding-bottom: 5px;
+     padding-left: 10px;
+ }
