--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,6 @@
 /* GENERAL STYLES */
-
-
-header {
-    /* margin-bottom: 200px; */
+body {
+    background-color: lightgray;
 }
 
 /* PICTURE OF THE DAY STYLES */
@@ -13,6 +11,10 @@ header {
     width: 100%;
     height: 500px;
     background: lightgrey;
+}
+
+#potdBody {
+    padding-bottom: 0;
 }
 
 
@@ -73,9 +75,20 @@ header {
 
 /* ROVER IMAGE STYLES */
 
+
+#roverSection {
+    margin-top: -16px;
+}
+
 .results {
-    border: solid 1px black;
+    /* border: solid 1px black; */
  
+}
+
+.results p {
+    color: red;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 .roverImages {
@@ -83,12 +96,20 @@ header {
     display: grid; 
     grid-template-columns: 25% 25% 25% 25%;
     /* grid-template-rows: 33% 33% 33%; */
+    margin-left: 20px;
+    margin-top: 40px;
 
  } 
 
  .roverImages img {
      width: 350px;
      height: 350px;
-     padding-bottom: 5px;
-     padding-left: 10px;
+     padding-bottom: 20px;
+     /* padding-left: 20px; */
+     
  }
+
+ #roverTitle {
+     color: green;
+ }
+
