font change to space mono

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 /* GENERAL STYLES */
 body {
     background-color: lightgray;
+    font-family: 'Space Mono', monospace;
 }
 
 /* PICTURE OF THE DAY STYLES */
